--- a/src/style/partials/_global.scss
+++ b/src/style/partials/_global.scss
@@ -6,3 +6,6 @@
  $color-hover-sec  : rgba(29, 155, 240, 0.1);
  $color-hover-btn  : rgb(16, 140, 216);
  $color-grey       : #f2f2f2;
+ $color-cover      : rgba(0, 0, 0, 0.4);
+ $color-modal      : #4698d0;
+ $color-modal-line : #d8d9db;
