Finalizado el componente spinner de progreso para la ventana mmodal

--- a/src/style/partials/_global.scss
+++ b/src/style/partials/_global.scss
@@ -2,6 +2,7 @@
  $color-primary    : #209beb;
  $color-font-pry   : #616264;
  $color-font-sec   : #111216;
+ $color-warning    : #e0cb3e;
  $color-hover-pry  : rgba(15, 20, 25, 0.1);
  $color-hover-sec  : rgba(29, 155, 240, 0.1);
  $color-hover-btn  : rgb(26, 140, 216);
