--- a/src/style/partials/_modal.scss
+++ b/src/style/partials/_modal.scss
@@ -1,4 +1,3 @@
-@use 'mixinfunc';
 
 .cover{
     width: 100vw;
@@ -15,7 +14,7 @@
 }
 
 .modal{
-    width: mixinfunc.em(600);
+    width: 600rem;;
     max-height: 90vh;
     display: none;
     flex-direction: column;
@@ -24,7 +23,7 @@
     left: 0;
     right: 0;
     margin: 0 auto;
-    border-radius: 1em;
+    border-radius: 16rem;
     background-color: #FFFFFF;
     overflow-y: auto;
     z-index: 2;
@@ -36,22 +35,22 @@
         top: 0;
         left: 0;
         align-items: center;
-        padding: .5em 0;
+        padding: 8rem 0;
     }
 
     &__header--active{
         background-color: rgba(255, 255, 255, 0.85);
-        backdrop-filter: blur(12px);
+        backdrop-filter: blur(12rem);
     }
 
     &__close{
-        width: mixinfunc.em(36);
-        height: mixinfunc.em(36);
+        width: 36rem;
+        height: 36rem;
         border-radius: 50%;
         display: grid;
         place-items: center;
         cursor: pointer;
-        margin-left: .5em;
+        margin-left: 8rem;
     }
 
     &__close:hover{
@@ -59,8 +58,8 @@
     }
 
     &__xmark{
-        width: mixinfunc.em(20);
-        height: mixinfunc.em(20);
+        width: 20rem;
+        height: 20rem;
     }
 
     &__main{
@@ -71,20 +70,20 @@
 
     &__profile{
         width: max-content;
-        margin-left: 1em;
+        margin-left: 16rem;
     }
 
     &__img{
-        width: 3.1em;
-        height: 3.1em;
+        width: 49.59rem;
+        height: 49.59rem;
         border-radius: 50%;
-        margin-top: .2em;
+        margin-top: 2rem;
     }
 
     &__wrapper{
         width: 100%;
-        border-bottom: 1px solid rgba(216, 217, 219, .5);
-        padding: 0 1em .5em 1em;
+        border-bottom: 1rem solid rgba(216, 217, 219, .5);
+        padding-bottom: 8rem;
     }
 
     &__all{
@@ -93,15 +92,15 @@
         flex-direction: row;
         align-items: center;
         justify-content: center;
-        padding: 0 .7em;
-        border-radius: 1em;
+        padding: 3rem 10rem;
+        border-radius: 16rem;
         color: $color-primary;
-        font-size: .9em;
+        font-size: 14.4rem;
         font-weight: 600;
-        gap: .5em;
+        gap: 8rem;
         cursor: pointer;
-        margin-top: .7em;
-        border: 1px solid $color-modal-line;
+        margin: 6rem 0 0 16rem;
+        border: 1rem solid $color-modal-line;
     }
 
     &__all:hover{
@@ -109,17 +108,18 @@
     }
 
     &__arrow{
-        width: 1em;
-        height: 1em;
+        width: 16rem;
+        height: 16rem;
     }
 
     &__input{
         width: 100%;
-        min-height: mixinfunc.em(80);
-        margin: 1em 0 .5em 0;
+        min-height: 80rem;
+        margin: 16rem 0 8rem 0;
+        padding: 0 16rem 0 16rem;
         font-size: 1.3em;
         font-weight: 400;
-        line-height: 1.5em;
+        line-height: 24rem;
         outline: none;
         resize: none;
         white-space: pre-wrap;
@@ -135,13 +135,14 @@
         display: inline-flex;
         flex-direction: row;
         align-items: center;
-        gap: .3em;
-        font-size: .9em;
+        gap: 4.8rem;
+        font-size: 14.4rem;
         font-weight: 600;
         color: $color-primary;
         cursor: pointer;
-        border-radius: 1em;
-        padding: .1em .9em;
+        border-radius: 16rem;
+        padding: 5rem 13rem;
+        margin: 0 0 4rem 6rem;
     }
 
     &__span:hover{
@@ -149,8 +150,8 @@
     }
 
     &__world{
-        width: 1.1em;
-        height: 1.1em;
+        width: 15.8rem;
+        height: 15.8rem;
     }
 
     &__footer{
@@ -164,19 +165,19 @@
         display: flex;
         flex-direction: row;
         justify-content: space-between;
-        padding: .5em 1em;
-        gap: 4.5em;
+        padding: 8rem 16rem;
+        gap: 118rem;
     }
 
     &__ul{
         display: flex;
         flex-direction: row;
-        gap: .2em;
+        gap: 3.2rem;
         color: $color-primary;
     }
 
     &__li{
-        padding: .5em;
+        padding: 8rem;
         border-radius: 50%;
         cursor: pointer;
     }
@@ -186,8 +187,8 @@
     }
 
     &__icon{
-        width: 1.2em;
-        height: 1.2em;
+        width: 19rem;
+        height: 19rem;
     }
 
     &__actions{
@@ -199,8 +200,8 @@
     }
 
     &__progresscircle{
-        width: mixinfunc.em(26);
-        height: mixinfunc.em(26);
+        width: 26rem;
+        height: 26rem;
         display: flex;
         justify-content: center;
         align-items: center;
@@ -210,18 +211,18 @@
     &__warning{
         display: none;
         position: absolute;
-        font-size: .6em;
+        font-size: 9.6rem;
     }
 
     &__spinner{
-        width: mixinfunc.em(26);
-        height: mixinfunc.em(26);
+        width: 26rem;
+        height: 26rem;
     }
 
     &__circle{
         fill: none;
         stroke-dasharray: 100 100;
-        stroke-width: 2px;
+        stroke-width: 2rem;
         stroke: $color-modal-line;
     }
 
@@ -233,11 +234,11 @@
     }
 
     &__addtweet{
-        padding: .2em;
+        padding: 3rem;
         border-radius: 50%;
-        border: 1px solid $color-modal-line;
+        border: 1rem solid $color-modal-line;
         cursor: pointer;
-        margin: 0 .5em;
+        margin: 0 8rem;
     }
 
     &__addtweet:hover{
@@ -245,17 +246,17 @@
     }
 
     &__add{
-        width: 1em;
-        height: 1em;
+        width: 16rem;
+        height: 16rem;
         color: $color-primary;
     }
 
     &__twettear{
-        padding: .5em 1em;
+        padding: 8rem 16rem;
         color: #FFFFFF;
         font-weight: 700;
-        border-radius: 1em;
-        margin-left: .5em;
+        border-radius: 16rem;
+        margin-left: 8rem;
         background-color: $color-primary;
         cursor: pointer;
     }
